# rust_gmail_checker

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
src/: accessor.rs  accounts.rs  client.rs  config.rs  gmail.rs  keyring.rs  lib.rs  main.rs  provider.rs  storage.rs  structs.rs  utils.rs
src/providers/: gmail.rs  mod.rs
