[package]
name = "rust_gmail"
version = "1.0.0"
authors = ["Crandel <cradlemann@gmail.com>"]

license-file = "LICENSE"

[lib]
name = "gmail_lib"
path = "src/lib.rs"

[dependencies]
dirs = "2.0.2"
failure = "0.1"
futures = "0.3"
itertools = "0.7"
regex = "1.3.1"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "=0.2.0-alpha.6", features = ["io", "tcp", "timer"] }

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'abort'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
