[package]
name = "rust_gmail"
version = "1.0.0"
authors = ["Crandel <cradlemann@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

[lib]
name = "gmail_lib"
path = "src/lib.rs"

[dependencies]
base64 = "0.10.1"
dirs = "2.0.2"
failure = "0.1"
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
itertools = "0.7"
regex = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'abort'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
