[package]
name = "gmail"
version = "0.2.0"
authors = ["Crandel"]
edition = "2021"
license-file = "LICENSE"

[lib]
name = "mail_lib"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
dirs = "4.0"
thiserror = "1.0"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
roxmltree = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'abort'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
